<resources>
    <string name="app_name">시사스터디</string>
    <string name="btn_app_name">시사스</string>
    <!--시작화면-->
    <string name="tv_str_start">시사스</string>
    <string name="btn_login">로그인</string>
    <string name="btn_join">회원가입</string>
    <!--로그인화면-->
    <string name="tv_str_login">로그인</string>
    <string name="et_login_id">이메일</string>
    <string name="et_login_pwd">비밀번호</string>
    <string name="btn_login_go">로그인</string>
    <string name="tv_logout">로그아웃 하시겠습니까?</string>
    <string name="tv_leave">정말 탈퇴 하시겠습니까?</string>
    <!--회원가입화면-->
    <string name="tv_str_member">회원가입</string>
    <string name="tv_str_member_update">회원정보 수정</string>
    <string name="tv_member_name">이름</string>
    <string name="tv_member_email">Email</string>
    <string name="btn_member_email_chk">인증</string>
    <string name="tv_member_pwd">비밀번호</string>
    <string name="tv_member_pwd_chk">비밀번호 확인</string>
    <string name="tv_member_major">전공</string>
    <string name="tv_member_interest_multi">관심분야(다중선택 가능)</string>
    <string name="tv_member_interest">관심분야</string>
    <string name="cb_member_politics">정치</string>
    <string name="cb_member_economics">경제</string>
    <string name="cb_member_social">사회</string>
    <string name="cb_member_it">IT</string>
    <string name="cb_member_world">세계</string>
    <string name="btn_member_go">가입하기</string>
    <!--프로필-->
    <string name="tv_profile_major">전공</string>
    <string name="tv_profile_interest">관심분야</string>
    <string name="tv_profile_coupon">보유한 관전쿠폰</string>
    <string name="tv_profile_coupon_num">개</string>
    <string name="tv_study_alert">스터디 시작 알림</string>
    <string name="btn_profile_update">내 정보수정</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_leave">탈퇴</string>
    <!--스터디-->
    <string name="btn_study_create">스터디 만들기</string>
    <string name="btn_study_join">스터디 목록보기</string>
    <!--스터디 만들기-->
    <string name="tv_study_name">방이름</string>
    <string name="tv_study_capacity">모집인원</string>
    <string name="tv_study_category_one">카테고리(1개만 선택가능)</string>
    <string name="tv_study_category">카테고리</string>
    <string name="rb_study_all">전체</string>
    <string name="rb_study_politics">정치</string>
    <string name="rb_study_economics">경제</string>
    <string name="rb_study_social">사회</string>
    <string name="rb_study_it">IT</string>
    <string name="rb_study_world">세계</string>
    <string name="tv_study_start_date">시작날짜</string>
    <string name="tv_study_end_date">종료날짜</string>
    <string name="tv_study_comment">스터디 설명</string>
    <string name="btn_study_create_go">만들기</string>
    <string name="btn_study_update_go">수정</string>
    <string name="btn_study_delete_go">삭제</string>
    <string name="tv_study_delete_dialog_1">정말 스터디를 취소하시겠습니까?</string>
    <string name="tv_study_delete_dialog_2">팀원에게 알릴 취소사유 :</string>
    <string name="btn_study_delete_dialog">보내기</string>
    <!--스터디 목록보기-->
    <string name="btn_study_register">참여신청</string>
    <string name="btn_study_watch">스터디 관전</string>

    <string name="tv_profile_score">평점</string>

    <string name="btn_ot_fix_keyword">확정</string>
    <string name="btn_ot_scrap">스크랩</string>
    <string name="btn_ot_start">시작</string>


    <!--chatting-->

    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <!--chatting-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">SEND</string>
    <string name="action_attach">ATTACH</string>
    <string name="action_capture">CAPTURE IMAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
