<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rg_study_category">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_all"
                android:id="@+id/rb_study_all"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_politics"
                android:id="@+id/rb_study_politics"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_economics"
                android:id="@+id/rb_study_economics"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_social"
                android:id="@+id/rb_study_social"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_it"
                android:id="@+id/rb_study_it"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_world"
                android:id="@+id/rb_study_world"
                android:checked="false"
                android:layout_weight="1" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_study_register"
            android:id="@+id/btn_study_apply"
            android:onClick="changeFragment"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_study_watch"
            android:id="@+id/btn_study_watch"
            android:onClick="changeFragment"
            android:layout_weight="1" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/fl_study_list" >
    </FrameLayout>
</LinearLayout>