<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:nestedScrollingEnabled="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_study_name"
            android:id="@+id/tv_study_name"
            android:textStyle="bold"
            android:layout_weight="3"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_study_name"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_study_capacity"
            android:id="@+id/tv_study_capacity"
            android:textStyle="bold"
            android:layout_weight="3"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_study_capacity"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_study_category_one"
            android:id="@+id/tv_study_category_one"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rg_study_category">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_politics"
                android:id="@+id/rb_study_politics"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_economics"
                android:id="@+id/rb_study_economics"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_social"
                android:id="@+id/rb_study_social"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_it"
                android:id="@+id/rb_study_it"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_study_world"
                android:id="@+id/rb_study_world"
                android:checked="false"
                android:layout_weight="1" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_study_start_date"
            android:id="@+id/tv_study_start_date"
            android:textStyle="bold"
            android:layout_weight="3"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_study_start_date_picked"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:focusable="false"
            android:clickable="true"
            android:height="30dp"
            android:singleLine="false"
            android:hint="선택하시려면 여기를 누르세요" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_study_end_date"
            android:id="@+id/tv_study_end_date"
            android:textStyle="bold"
            android:layout_weight="3"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_study_end_date_picked"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:focusable="false"
            android:clickable="true"
            android:height="30dp"
            android:singleLine="false"
            android:hint="선택하시려면 여기를 누르세요" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_study_comment"
            android:id="@+id/tv_study_comment"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_study_comment"
            android:minLines="3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_study_update_go"
            android:id="@+id/btn_study_update_go"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_study_delete_go"
            android:id="@+id/btn_study_delete_go"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>