<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_str_start"
            android:id="@+id/tv_str_login"
            android:textStyle="bold"
            android:textSize="70dp"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center_horizontal">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_login_id"
            android:hint="@string/et_login_id" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_login_pwd"
            android:hint="@string/et_login_pwd" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_go"
            android:id="@+id/btn_login_go"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_join"
            android:id="@+id/btn_join"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>
    </LinearLayout>
</LinearLayout>